src/objects/sma__MACache__c.object
<CustomObject>
    <fields>
        <fullName>sma__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sma__CacheData__c</fullName>
        <label>Cache Data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sma__SavedQuery__c</fullName>
        <label>Saved Query</label>
        <referenceTo>sma__MASavedQry__c</referenceTo>
        <relationshipLabel>MapAnything Caches</relationshipLabel>
        <relationshipName>MACaches</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>MapAnything Cache</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Cache Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MapAnything Caches</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>